--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -435,6 +435,9 @@ page:
       gross       : Gross
       net         : Net
       avgTrade    : Avg trade
+      stopLoss    : Stop loss
+      takeProfit  : Take profit
+      session     : Session
 
       backtestDialog:
         title           : Backtest results
