Localized field to optimize and added "Net profit * avg trade" option

--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -406,6 +406,8 @@ page:
             name: Drawdown
           - id: avg-trade
             name: Average trade
+          - id: net-profit*avg-trade
+            name: Net profit * Average trade
         taCurrStep:   Current step
         taTotalSteps: Total steps
         taPercentage: Percentage
