--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -362,6 +362,8 @@ page:
       winningPercValue:  Value (%)
       equityAverage:     Equity over its average
       equityLen:         Average trades length
+      trendline:         Trendline slope > value
+      trendlineValue:    Slope * 100
       filterSaved:       Filter saved
       summary: Summary
       analysis: Analysis
@@ -384,6 +386,7 @@ page:
         positProfit: Positive profit
         oldVsNew:    Old vs new period
         winningPerc: Winning % > value
+        trendline:   Trendline
         filterActivation: Filter activation
 
       optimize:
@@ -395,6 +398,8 @@ page:
         oldVsNewPeriod:  Old vs new
         winningPerc:     Winning %
         equityVsAverage: Equity vs average
+        trendline:       Trendline
+        value:           Value
         selected:  Selected
         filter:    Filter
         parameter: Parameter
