Improved create/edit of connections, added connect & disconnect buttons and reviewed adapter structure

--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -34,6 +34,8 @@ button:
   auto      : AUTO
   enable    : ENABLE
   disable   : DISABLE
+  connect   : CONNECT
+  disconnect: DISCONNECT
 
 # ==============================================================================
 # ===
@@ -519,6 +521,18 @@ page:
   # ==============================================================================
 
 # ==============================================================================
+# ===
+# === Adapters
+# ===
+# ==============================================================================
+
+adapter:
+  IBKR:
+    username: Username
+    password: Password
+    live    : Live
+    authUrl : Authentication URL
+    apiUrl  : API URL
 
 # ==============================================================================
 # ===
