--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -38,6 +38,7 @@ menu-button:
   toTrading    : Move to trading
   toReady      : Move to ready
   delete       : Delete
+  deleteTrades : Delete trades
 
 # ==============================================================================
 # ===
@@ -246,6 +247,21 @@ model:
     grossProfit: Gross profit
     netProfit  : Net profit
 
+  trade:
+    tradeType          : Type
+    entryDate          : Entry date
+    entryPrice         : Entry price
+    entryLabel         : Entry label
+    exitDate           : Exit date
+    exitPrice          : Exit price
+    exitLabel          : Exit label
+    grossProfit        : Gross profit
+    contracts          : Contracts
+    entryDateAtBroker  : Entry date at broker
+    entryPriceAtBroker : Entry price at broker
+    exitDateAtBroker   : Exit date at broker
+    exitPriceAtBroker  : Exit price at broker
+
 # ==============================================================================
 # ===
 # === Pages
@@ -350,6 +366,40 @@ page:
 
       performance:
         title: Trading system performance
+        period  : Analysis period
+        timezone: View timezone
+        exchange: Exchange
+        periods:
+          - id: 30
+            name: Last month
+          - id: 90
+            name: Last 3 months
+          - id: 180
+            name: Last 6 months
+          - id: 365
+            name: Last year
+          - id: 730
+            name: Last 2 years
+          - id: 0
+            name: All
+        tab:
+          summary : Summary
+          charts  : Charts
+          periodic: Periodic
+          trades  : Trades
+        summary:
+          metric  : Metric
+          all     : All
+          long    : Long
+          short   : Short
+          gross   : Gross
+          net     : Net
+          profit  : Profit
+          maxDD   : Max drawdown
+          avgTrade: Average trade
+          trades  : Trades
+        trades:
+          filter: Filter...
 
     # ----------------------------------------------------------------------------
 
