Moved stats calculation on a daily basis. Added possibility to switch charts visualization from time based to trades based.

--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -345,6 +345,9 @@ page:
         lastTrade      : Last trade
         currency       : Currency
         performance    : Performance
+        chart:
+          time  : Time
+          trades: Trades
         buttons:
           on      : On
           off     : Off
